--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,17 @@ Flask-SQLAlchemy
 flask-login
 python 3.8.3
 
+
+## How to launch application
+
+1. Check that you have flask
+2. Clone the code: `https://github.com/RamiHadji/CS50-Final-Project.git`
+3. Run command prompt in the folder and run `pip install python 3.8.3`
+4.Run command prompt in the folder and run `pip install Flask-SQLAlchemy`
+5.Run command prompt in the folder and run `pip install flask-login`
+5. In your browser go to `http://127.0.0.1:5000/`
+6. You are ready to go!
+
 ## Viewing The App
 
 Go to `http://127.0.0.1:5000`
